--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: r
 sudo: true
 fortran: true
 #cache: packages
-  
+
 r_check_args: "--no-vignettes"
 r_build_args: '--no-build-vignettes'
 use_devtools: true
@@ -10,122 +10,58 @@ use_devtools: true
 #repos:
 #  CRAN: https://cloud.r-project.org
 #  ropensci: http://packages.ropensci.org
-  
+
 env:
-global:
-  - R_MAX_NUM_DLLS=999
-  #- _R_CHECK_FORCE_SUGGESTS_=true
-  - _R_CHECK_CRAN_INCOMING_=true
-  - MAKEFLAGS="-j 2"
+  global:
+    - R_MAX_NUM_DLLS=999
+    - _R_CHECK_CRAN_INCOMING_=true
+    - _R_CHECK_FORCE_SUGGESTS_=false
+    - MAKEFLAGS="-j 2"
+
+r_binary_packages:
+  #- rstantools
+  #- data.table
+  - jsonlite
+  #- Rcpp
+  #- cOde
+  - remotes
+  #- Deriv
+  #- mvtnorm
+  - knitr
+  - testthat
+  - devtools
+  - shiny
+  #- mize
+  #- StanHeaders
+  #- OpenMx
+
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-7
+      - gfortran-7
+      - r-cran-rstan
 
 matrix:
   include:
     - os: linux
       dist: trusty
       r: release
-  #    r_binary_packages:
-  #      - rstantools
-  #      - data.table
-  #      - jsonlite
-  #      - Rcpp
-  #      - cOde
-  #      - remotes
-  #      - Deriv
-  #      - mvtnorm
-  #      - knitr
-  #      - testthat
-  #      - devtools
-  #      - DEoptim
-  #      - GGally
-  #      - shiny
-  #      - mize
-  #      - StanHeaders
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-7
-            - gfortran-7
-      env:
-        - CXX_COMPILER='g++-7'
-        - C_COMPILER='gcc-7'
-        - Fortran_COMPILER='gfortran-7'
-        - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
-    - os: linux
-      dist: trusty
-      r: devel
-      fortran: true
-  #   r_binary_packages:
-  #    - remotes
-  #    - rstantools
-  #    - data.table
-  #    - jsonlite
-  #    - Rcpp
-  #    - cOde
-  #    - Deriv
-  #    - mvtnorm
-  #    - knitr
-  #    - testthat
-  #    - devtools
-  #    - DEoptim
-  #    - GGally
-  #    - shiny
-  #    - mize
-  #    - StanHeaders
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
-            - g++-7
-        env:
-          - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
-        
+      env: CC="gcc-7" CXX="g++-7" CXX14="g++-7 -fPIC -std=c++1y" CXX14FLAGS="-mtune=native -march=native -Wno-unused-variable -Wno-unused-function -Wno-unused-local-typedefs -Wno-ignored-attributes -Wno-deprecated-declarations -Wno-attributes -O3"
+    #- os: linux
+    #  dist: trusty
+    #  r: devel
+    #  env: CC="gcc-7" CXX="g++-7" CXX14="g++-7 -fPIC -std=c++1y" CXX14FLAGS="-mtune=native -march=native -Wno-unused-variable -Wno-unused-function -Wno-unused-local-typedefs -Wno-ignored-attributes -Wno-deprecated-declarations -Wno-attributes -O3"
     - os: osx
       osx_image: xcode10
       r: release
-  #   r_binary_packages:
-  #    - rstantools
-  #    - data.table
-  #    - jsonlite
-  #    - Rcpp
-  #    - OpenMx
-  #    - cOde
-  #    - remotes
-  #    - Deriv
-  #    - mvtnorm
-  #    - knitr
-  #    - testthat
-  #    - devtools
-  #    - DEoptim
-  #    - GGally
-  #    - shiny
-  #    - mize
-  #    - StanHeaders
       fortran: false
+      env: CC="clang" CXX14="clang++ -arch x86_64 -ftemplate-depth-256" CXX14FLAGS="-O3 -mtune=native -march=native -Wno-unused-variable -Wno-unused-function  -Wno-unknown-pragmas"
 
 before_install:
-  - mkdir -p ~/.R/   
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then echo "CC=gcc-7" >> ~/.R/Makevars; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then echo "F77=gfortran-7" >> ~/.R/Makevars; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then echo "FC=gfortran-7" >> ~/.R/Makevars; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then echo "CXX=g++-7" >> ~/.R/Makevars; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then echo "CXX14 = g++-7 -fPIC -std=c++1y" >> ~/.R/Makevars; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then echo "CXX14FLAGS = -mtune=native -march=native -Wno-unused-variable -Wno-unused-function -Wno-unused-local-typedefs -Wno-ignored-attributes -Wno-deprecated-declarations -Wno-attributes -O3" >> ~/.R/Makevars; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then echo "CXX14 = clang++ -arch x86_64 -ftemplate-depth-256" >> ~/.R/Makevars; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then echo "CXX14FLAGS = -O3 -mtune=native -march=native -Wno-unused-variable -Wno-unused-function  -Wno-unknown-pragmas" >> ~/.R/Makevars; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then echo "CC = clang" >> ~/.R/Makevars; fi
-  #- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -yq --allow-unauthenticated --no-install-suggests --no-install-recommends r-cran-openmx; fi
-  #- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -yq --allow-unauthenticated --no-install-suggests --no-install-recommends r-cran-rstan; fi
-
-  #- R -e 'install.packages("remotes");library(remotes);remotes::install_deps(dependencies = TRUE,upgrade="always")'
-  #- eval "${MATRIX_EVAL}"
-  
-install:
-  #- if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo ln -s /usr/lib/x86_64-linux-gnu/libgfortran.so.3 /usr/lib/libgfortran.so
-  #- R -e 'install.packages("devtools")'
-  #- R -e 'devtools::install_deps(dep = T,upgrade="always")'
+  - mkdir ~/.R && env >> ~/.R/Makevars # slight overkill
 
 script:
   - travis_wait 30 R CMD build --no-build-vignettes .
