--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: r
-sudo: true
-fortran: true
-#cache: packages
+sudo: false
+cache:
+  directories:
+    - $TRAVIS_BUILD_DIR/packrat/src
+    - $TRAVIS_BUILD_DIR/packrat/lib
+  packages: true
 
 
 #repos:
@@ -59,6 +62,10 @@ matrix:
 
 before_install:
   - mkdir ~/.R && env >> ~/.R/Makevars # slight overkill
+
+install:
+  - R -e "0" --args --bootstrap-packrat
+  - R -e "packrat::restore(restart = FALSE)"
 
 script:
   - travis_wait 30 R CMD build --no-build-vignettes .
