--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 language: r
 sudo: false
-cache:
-  directories:
-    - $TRAVIS_BUILD_DIR/packrat/src
-    - $TRAVIS_BUILD_DIR/packrat/lib
-  packages: true
+#cache: packages
 
 # TODO
 # + build args, though os-matrix specific are considered non-portable
@@ -66,10 +62,6 @@ matrix:
 
 before_install:
   - mkdir ~/.R && env >> ~/.R/Makevars # slight overkill
-
-install:
-  - R -e "0" --args --bootstrap-packrat
-  - R -e "packrat::restore(restart = FALSE)"
 
 script:
   - travis_wait 30 R CMD build --no-build-vignettes .
