travis: test packages

--- a/.travis.yml
+++ b/.travis.yml
@@ -65,27 +65,27 @@ matrix:
       r: release
       fortran: false
       env: CC="clang" CXX14="clang++ -arch x86_64 -ftemplate-depth-256" CXX14FLAGS="-O3 -mtune=native -march=native -Wno-unused-variable -Wno-unused-function  -Wno-unknown-pragmas"
-      r_binary_packages:
-        - rpf
-        - data.table
-        - mize
-        - loo
-        - progress
-        - reshape
-        - checkmate
-        - hms
-        - inline
-        - jsonlite
-        - remotes
-        - knitr
-        - testthat
-        - devtools
-        - shiny
-        - cOde
-        - DEoptim
-        - GGally
-        - gridExtra
-        - matrixStats
+      r_binary_packages: []
+      #  - rpf
+      #  - data.table
+      #  - mize
+      #  - loo
+      #  - progress
+      #  - reshape
+      #  - checkmate
+      #  - hms
+      #  - inline
+      #  - jsonlite
+      #  - remotes
+      #  - knitr
+      #  - testthat
+      #  - devtools
+      #  - shiny
+      #  - cOde
+      #  - DEoptim
+      #  - GGally
+      #  - gridExtra
+      #  - matrixStats
 
 before_install:
   - mkdir ~/.R
