--- a/.travis.yml
+++ b/.travis.yml
@@ -92,11 +92,10 @@ script:
 - |
   R CMD build --no-build-vignettes .
   if [[ "$TRAVIS_PULL_REQUEST" != "false" ]] || [[ "$TRAVIS_BRANCH" = "master" ]] ; then
-    travis_wait 30 R CMD check --no-vignettes --as-cran *tar.gz
+    travis_wait 60 R CMD check --no-vignettes --as-cran *tar.gz
   else
-    #Rscript -e "install.packages(list.files(pattern='ctsem.*tar.gz'))"
-    #travis_wait 30 Rscript -e "library(devtools); devtools::test()"
-    travis_wait 30 R CMD check --no-vignettes --as-cran *tar.gz
+    Rscript -e "install.packages(list.files(pattern='ctsem.*tar.gz'))"
+    travis_wait 60 Rscript -e "library(devtools); devtools::test()"
   fi
   #cat ctsem.Rcheck/00install.out*
   #cat ctsem.Rcheck/ctsem-Ex.Rout*
