travis: cleanup and use bionic for devel

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
 language: r
 sudo: false
 cache: packages
-
-# TODO
-# + build args, though os-matrix specific are considered non-portable
-warnings_are_errors: false
+warnings_are_errors: true  # true is default
 
 env:
   global:
@@ -50,50 +47,46 @@ r_binary_packages:
   - rstantools
   - deriv
 
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - g++-7
-      - gfortran-7
-
 matrix:
   include:
     - os: linux
       dist: xenial
       r: release
-      env: CC="gcc-7" CXX="g++-7" CXX14="g++-7 -fPIC -std=c++1y" CXX14FLAGS="-mtune=native -march=native -Wno-unused-variable -Wno-unused-function -Wno-unused-local-typedefs -Wno-ignored-attributes -Wno-deprecated-declarations -Wno-attributes -O3"
-   # - os: linux
-   #   dist: xenial
-   #   r: devel
-   #   env: CC="gcc-7" CXX="g++-7" CXX14="g++-7 -fPIC -std=c++1y" CXX14FLAGS="-mtune=native -march=native -Wno-unused-variable -Wno-unused-function -Wno-unused-local-typedefs -Wno-ignored-attributes -Wno-deprecated-declarations -Wno-attributes -O3"
-   # - os: osx
-   #   osx_image: xcode10
-   #   r: release
-   #   fortran: false
-   #   env: CC="clang" CXX14="clang++ -arch x86_64 -ftemplate-depth-256" CXX14FLAGS="-O3 -mtune=native -march=native -Wno-unused-variable -Wno-unused-function  -Wno-unknown-pragmas"
-   #   # Override this array to an empty value, because automatic dependency
-   #   # checks on MacOS will result in binary package download from CRAN
-   #   # anyway. Also, the names from c2deb4u are not consistent with the
-   #   # package names on CRAN (cOde vs code, DEoptim vs deoptim and so on..)
-   #   r_binary_packages: []
+    - os: linux
+      dist: bionic
+      r: release
+      # do we really need/want -O3 and mtune/march native? If so, thi should go into package src Makevars
+    #  env: CC="gcc-7" CXX="g++-7" CXX14="g++-7 -fPIC -std=c++1y" CXX14FLAGS="-mtune=native -march=native -Wno-unused-variable -Wno-unused-function -Wno-unused-local-typedefs -Wno-ignored-attributes -Wno-deprecated-declarations -Wno-attributes -O3"
+    - os: linux
+      dist: bionic
+      r: devel
+    - os: osx
+      osx_image: xcode10
+      r: release
+      fortran: false
+    #  env: CC="clang" CXX14="clang++ -arch x86_64 -ftemplate-depth-256" CXX14FLAGS="-O3 -mtune=native -march=native -Wno-unused-variable -Wno-unused-function  -Wno-unknown-pragmas"
+      # Override this array to an empty value, because automatic dependency
+      # checks on MacOS will result in binary package download from CRAN
+      # anyway. Also, the names from c2deb4u are not consistent with the
+      # package names on CRAN (cOde vs code, DEoptim vs deoptim and so on..)
+      r_binary_packages: []
 
 before_install:
-  - mkdir ~/.R
-  - env | grep -e MAKEFLAGS -e CC -e CXX >> ~/.R/Makevars
+  # This should be done in the base travis image, really
   - "[[ \"$TRAVIS_OS_NAME\" = 'linux' ]] && sudo locale-gen en_US.UTF-8 || true"
 
 script:
 - |
   R CMD build --no-build-vignettes .
   if [[ "$TRAVIS_PULL_REQUEST" != "false" ]] || [[ "$TRAVIS_BRANCH" = "master" ]] ; then
+    # Do the full stack of tests and checks on everything that goes into master
     travis_wait 60 R CMD check --no-vignettes --as-cran *tar.gz
   else
-    # Rscript -e "install.packages(list.files(pattern='ctsem.*tar.gz'))"
-    # travis_wait 60 Rscript -e "library(devtools); devtools::test()"
-    travis_wait 60 R CMD check --no-vignettes --as-cran *tar.gz
+    # Do basic testing else
+    Rscript -e "install.packages(list.files(pattern='ctsem.*tar.gz'))"
+    travis_wait 60 Rscript -e "library(devtools); devtools::test()"
   fi
+  # Useful logs when things go wrong with Travis:
   #cat ctsem.Rcheck/00install.out*
   #cat ctsem.Rcheck/ctsem-Ex.Rout*
   #cat ctsem.Rcheck/tests/testthat.Rout*
